// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Enum > when value is a primitive > prints correctly for empty value 1`] = `
[
  "ENUM should be equal to one of the allowed values",
  "(foo, bar)
",
  "[0m[31m[1m>[22m[39m[90m 1 |[39m [32m"baz"[39m
 [90m   |[39m [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m [31m[1m👈🏽  Did you mean bar here?[22m[39m[0m",
]
`;

exports[`Enum > when value is a primitive > prints correctly for enum prop 1`] = `
[
  "ENUM should be equal to one of the allowed values",
  "(foo, bar)
",
  "[0m[31m[1m>[22m[39m[90m 1 |[39m [32m"baz"[39m
 [90m   |[39m [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m [31m[1m👈🏽  Did you mean bar here?[22m[39m[0m",
]
`;

exports[`Enum > when value is a primitive > prints correctly for no levenshtein match 1`] = `
[
  "ENUM should be equal to one of the allowed values",
  "(one, two)
",
  "[0m[31m[1m>[22m[39m[90m 1 |[39m [32m"baz"[39m
 [90m   |[39m [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m [31m[1m👈🏽  Unexpected value, should be equal to one of the allowed values[22m[39m[0m",
]
`;

exports[`Enum > when value is an object > prints correctly for empty value 1`] = `
[
  "ENUM should be equal to one of the allowed values",
  "(foo, bar)
",
  "[0m [90m 1 |[39m {
[31m[1m>[22m[39m[90m 2 |[39m   [32m"id"[39m[33m:[39m [32m"baz"[39m
 [90m   |[39m         [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m [31m[1m👈🏽  Did you mean bar here?[22m[39m
 [90m 3 |[39m }[0m",
]
`;

exports[`Enum > when value is an object > prints correctly for enum prop 1`] = `
[
  "ENUM should be equal to one of the allowed values",
  "(foo, bar)
",
  "[0m [90m 1 |[39m {
[31m[1m>[22m[39m[90m 2 |[39m   [32m"id"[39m[33m:[39m [32m"baz"[39m
 [90m   |[39m         [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m [31m[1m👈🏽  Did you mean bar here?[22m[39m
 [90m 3 |[39m }[0m",
]
`;

exports[`Enum > when value is an object > prints correctly for no levenshtein match 1`] = `
[
  "ENUM should be equal to one of the allowed values",
  "(one, two)
",
  "[0m [90m 1 |[39m {
[31m[1m>[22m[39m[90m 2 |[39m   [32m"id"[39m[33m:[39m [32m"baz"[39m
 [90m   |[39m         [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m [31m[1m👈🏽  Unexpected value, should be equal to one of the allowed values[22m[39m
 [90m 3 |[39m }[0m",
]
`;
